--- a/style.css
+++ b/style.css
@@ -70,7 +70,7 @@ a {
   background-size: 102% 106%;
   background-repeat: no-repeat;
   max-width: 100%;
-  background-image: url("S5-Gg-14.png");
+  background-image: url("bg-index-02.png");
 }
 
 .gris {
@@ -102,7 +102,7 @@ a {
   color: #ffffff;
   width: 171px;
   height: 34px;
-  font-size: 20px;
+  font-size: 18px;
   justify-content: center;
   border: solid #ffffff 1px;
   border-radius: 20px;
@@ -128,7 +128,7 @@ a {
 
 .contep {
   position: absolute;
-  margin-top: 189px;
+  margin-top: 121px;
   width: 96%;
   height: 80px;
   margin-left: 4%;
@@ -138,9 +138,9 @@ a {
 .princ {
   color: rgba(0, 0, 0, 0);
   border-radius: 10px;
-  width: 70px;
-  height: 70px;
-  margin: 5px;
+  width: 50px;
+  height: 50px;
+  margin: 44px;
   border: solid #fff 3px;
   border-radius: 50%;
   cursor: pointer;
@@ -166,8 +166,8 @@ a {
 
 .btn1 {
   background-color: #0f102b;
-  line-height: 3.5;
-  font-size: 19px;
+  line-height: 1.3;
+  font-size: 36px;
   color: #ffffff;
 }
 
@@ -199,8 +199,7 @@ a {
 .princ:hover {
   background-color: rgba(0, 170, 191, 0.7);
   border: solid #d18a29 4px;
-  width: 75px;
-  height: 75px;
+  line-height: 1.3;
 }
 
 .nombre {
@@ -589,10 +588,10 @@ a {
 
 .texto1 {
   position: absolute;
-  margin-top: -238px;
+  margin-top: -289px;
   margin-left: 60px;
   width: 90%;
-  height: 45%;
+  height: 55%;
   background-color: rgba(255, 255, 255, 0.2);
   color: #ffffff;
   border-radius: 20px;
@@ -668,27 +667,27 @@ li {
 }
 
 .parr {
-  margin-top: 10px;
+  margin-top: 20px;
 }
 
 .parr2 {
-  margin-top: 22px;
+  margin-top: 27px ;
 }
 
 .parr3 {
-  margin-top: 0px;
+  margin-top: 31px;
 }
 
 .parr4 {
-  margin-top: 33px;
+  margin-top: 27px;
 }
 
 .parr5 {
-  margin-top: 36px;
+  margin-top: 50px;
 }
 
 .parr6 {
-  margin-top: 10px;
+  margin-top: 5px;
 }
 
 .parr7 {
@@ -709,4 +708,23 @@ li {
 
 .parr11 {
   margin-top: 23px;
+}
+
+.conteimatex {
+  display: flex;
+}
+
+.imagder {
+  margin-top: 36px;
+  width: 338px;
+  height: 135px;
+  margin-left: 16px;
+}
+
+.logo-egade {
+  position: absolute;
+  width: 224px;
+  height: auto;
+  margin-top: 19px;
+  margin-left: 630px;
 }
